feat: added mor content

--- a/index.html
+++ b/index.html
@@ -86,7 +86,18 @@
                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum provident laborum asperiores placeat ea ex dolorum obcaecati ab deleniti vel ratione saepe culpa, molestias voluptatem dolores inventore error? Perspiciatis, magnam.
                 </div>
                 <div class="recomended">
-                    asd
+                    <div class="header-separator">
+                        <p>Recomendados</p>
+                    </div>
+                    <div class="news-grid">
+                        <div class="news">  
+                            <div class="image-cont">
+                                <p>1</p>
+                                <img src="assets/Screenshot_70.png" alt="">
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt aspernatur ducimus quisquam sunt iure eligendi soluta cumque tempore numquam, vero ipsa quos obcaecati nobis porro. Cumque corporis molestiae rerum pariatur.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </article>
